stateDiagram-v2
  [*] --> IDLE
  IDLE --> WAITING_FOR_METADATA: MEDIA_OWNED
  WAITING_FOR_METADATA --> WAITING_FOR_MEDIA_PROGRESS: metadataReady
  WAITING_FOR_MEDIA_PROGRESS --> HEALTHY: progress
  WAITING_FOR_MEDIA_PROGRESS --> PAUSED_HIDDEN: hidden
  WAITING_FOR_MEDIA_PROGRESS --> WAITING_FOR_AUTOPLAY: autoplayBlocked
  PAUSED_HIDDEN --> WAITING_FOR_MEDIA_PROGRESS: visible
  WAITING_FOR_MEDIA_PROGRESS --> FAILED: hardTimeout
  FAILED --> [*]
